--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,6 +4,7 @@ $fontAwesomePath: '/styles/fonts/';
 $page-width: 1000px;
 $text-color: #666666;
 $extra-color: #3889ec;
+$section-margin: 40px;
 
 // Navbar
 $header-height: 90px;
